More cleaning and improving from minor issues

--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$MVrD7xzQ7tIItKUdIbEJG.P1XFw65ugFH4XkLkF5ClKBRONgtJlmK"
+# 	- password: java.lang.String = "$2a$05$SuuItlqCGK9GwEiIB1vp.eITREjY1ZoNq1R9nxvJP/CYy3Zn18ou6"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$E/Yb48kqwPa5/dkrbIYVT.qmBZb2ODJCLT4SEw3QldiOIJ91NA9K6"
+# 	- password: java.lang.String = "$2a$05$xXJg.19aRiiZne4rixV0IOCCq6mfy6axyIb7WhIuxL5xhifFryhVe"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -795,7 +795,7 @@ provider1UserAccount=50
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "provider1"
-# 	- password: java.lang.String = "$2a$05$og6MtsT43RfpwOGMne0LOecyvz8YDOVDuqsCTHFLaRkhRBemBbqVe"
+# 	- password: java.lang.String = "$2a$05$QT.D6j.Hcd2W43XaObOAKOZ.R1Ctglks44XRXTGb/rGMXo0W.2zfS"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Provider, surname=One, email=provider1@mail.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Provider{id=51, version=0}, acme.framework.entities.Authenticated{id=52, version=0}]
@@ -842,7 +842,7 @@ consumer1UserAccount=53
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "consumer1"
-# 	- password: java.lang.String = "$2a$05$//sCgyBHjR9bAL118sOjmOTJQhfop.VXJPZerxDw7Rmp2jrT/uYsy"
+# 	- password: java.lang.String = "$2a$05$rmEv3/MjmJxfAwkhOvvsJ.hjyt08rRsYZCdzw/jzlgmvZ8OqmL.bS"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Consumer, surname=One, email=consumer1@mail.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Consumer{id=54, version=0}, acme.framework.entities.Authenticated{id=55, version=0}]
@@ -889,7 +889,7 @@ employer1UserAccount=56
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer1"
-# 	- password: java.lang.String = "$2a$05$ACM6mr9Ae9gSIzsRwIn0dObzqmdTHSyaWkDcW/45.LzO3BcqF/1ZS"
+# 	- password: java.lang.String = "$2a$05$GQrV4azNMFjFLpguFbIm0.hCCJqDhvXmc6e639BSlaBLMEfwQJB9u"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=One, email=employer1@mail.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=57, version=0}, acme.framework.entities.Authenticated{id=58, version=0}]
@@ -936,7 +936,7 @@ employer2UserAccount=59
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer2"
-# 	- password: java.lang.String = "$2a$05$0fjGLnss5BjguASPBV4oWOz9BPvHElRdIfsjhouO7ZuMJyfeFhtM6"
+# 	- password: java.lang.String = "$2a$05$4/JpwZnf1x44UTBc8VlftOzXb2.nLUhCwPWgtVEI.AMOYWAZFum0K"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=Two, email=employer2@mail.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=60, version=0}, acme.framework.entities.Authenticated{id=61, version=0}]
@@ -1217,7 +1217,7 @@ worker1UserAccount=76
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker1"
-# 	- password: java.lang.String = "$2a$05$7qAahnDCSVQId6dBDC9hueGKy0QGH0AOX87pl0T9UCuY//bHQr8cS"
+# 	- password: java.lang.String = "$2a$05$TneZCKX7tTRhk1Dy399WRukS15dxyf0Q.LF1ZneztvUk2i/r1JQy6"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=One, email=worker1@mail.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=77, version=0}, acme.framework.entities.Authenticated{id=78, version=0}]
@@ -1264,7 +1264,7 @@ worker2UserAccount=79
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker2"
-# 	- password: java.lang.String = "$2a$05$G2Xuad8lCepcbLQcX6bXCe7DR5gfSAhIrDO0FTsRdXTkR3W3SX5bK"
+# 	- password: java.lang.String = "$2a$05$e/RSzLw2zf.AF6KuOPLRYu6n.7uTYyPSdq4vaX/IPYX64d9.V4T8O"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=Two, email=worker2@mail.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=80, version=0}, acme.framework.entities.Authenticated{id=81, version=0}]
@@ -1479,7 +1479,7 @@ auditor1UserAccount=90
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor1"
-# 	- password: java.lang.String = "$2a$05$rVZ3fGHRqILpiV2sWy.My.Vt2IkgthlHz2qHbGWYMazFSFujGuIrS"
+# 	- password: java.lang.String = "$2a$05$QySB0X127otS3YqN.qt5mefJObkQZ41PuiDztnPqbyYGhHxu1ZYsm"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Auditor, surname=One, email=auditor1@mail.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=91, version=0}, acme.framework.entities.Authenticated{id=92, version=0}]
@@ -1526,7 +1526,7 @@ auditor2UserAccount=93
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor2"
-# 	- password: java.lang.String = "$2a$05$z9Je36LXxbuLNw42OxbRLubrRHzY8Jbrh5IPDg7IFuD5mcRcQHKF6"
+# 	- password: java.lang.String = "$2a$05$RXtW06CYLv4y2g4wNk9eAepbizqKswMNj.MsqQz3c3hFAODelJTm6"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Auditor, surname=Two, email=auditor2@mail.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=94, version=0}, acme.framework.entities.Authenticated{id=95, version=0}]
@@ -1796,7 +1796,7 @@ sponsor1UserAccount=110
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor1"
-# 	- password: java.lang.String = "$2a$05$/ISfaSl.HTsc0Ow47Khr/u5CuI0kkv4PPAhbcuMEzTv8s81dGiwQi"
+# 	- password: java.lang.String = "$2a$05$QVCQ6lVKfD0ecVggadq.Oejhb2OSigycYPqKgNeN9FQCYt0fkxumO"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor1@mail.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=111, version=0}, acme.framework.entities.Authenticated{id=112, version=0}]
@@ -1843,7 +1843,7 @@ sponsor2UserAccount=113
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor2"
-# 	- password: java.lang.String = "$2a$05$Du5uK8JSOEnygdcX2IVi2eOF3ufI4aimmKKohJUv0Ioap0acu4IEe"
+# 	- password: java.lang.String = "$2a$05$6IBCqMuPh.XRXEfsR1GRQu506gytLu9TaLz.mW12B7z78naZM1UhC"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=Two, email=sponsor2@mail.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=114, version=0}, acme.framework.entities.Authenticated{id=115, version=0}]
@@ -1890,7 +1890,7 @@ sponsor3UserAccount=116
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor3"
-# 	- password: java.lang.String = "$2a$05$g/Ft/jjTD646u.QNd3xf/.QzMGhEN3cXCK6tua1xy5X9J2fklp2hK"
+# 	- password: java.lang.String = "$2a$05$jjP.hjWX0/mKmscEhaKW6.2f./nJ7pT/AVBgj6sbMOt/Zykv5LmL."
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=Three, email=sponsor3@mail.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=117, version=0}, acme.framework.entities.Authenticated{id=118, version=0}]
