--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,9 +12,9 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$SuuItlqCGK9GwEiIB1vp.eITREjY1ZoNq1R9nxvJP/CYy3Zn18ou6"
+# 	- password: java.lang.String = "$2a$05$JrdPTG.zxketMQecq9J.GuAoZtqlZaRGZY5vzLp0DvP4V1hosdJdm"
 # 	- enabled: boolean = false
-# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
+# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
 # 	@ $assertionsDisabled: boolean = false
 
@@ -43,9 +43,9 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$xXJg.19aRiiZne4rixV0IOCCq6mfy6axyIb7WhIuxL5xhifFryhVe"
+# 	- password: java.lang.String = "$2a$05$t46HT9D6AfI7goGZeJz4Yudn1Y9ZsF/hbfah5fCTA1mk3qODdixB2"
 # 	- enabled: boolean = true
-# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
+# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
 # 	@ $assertionsDisabled: boolean = false
 
@@ -795,9 +795,9 @@ provider1UserAccount=50
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "provider1"
-# 	- password: java.lang.String = "$2a$05$QT.D6j.Hcd2W43XaObOAKOZ.R1Ctglks44XRXTGb/rGMXo0W.2zfS"
+# 	- password: java.lang.String = "$2a$05$7HJ31ahJyiOQM9EOCPCipOLZVk8Z0d.sxpRn/y1iNr13iXKx0Nfqi"
 # 	- enabled: boolean = true
-# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Provider, surname=One, email=provider1@mail.com)
+# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Provider, surname=One, email=provider1@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Provider{id=51, version=0}, acme.framework.entities.Authenticated{id=52, version=0}]
 # 	@ $assertionsDisabled: boolean = false
 
@@ -842,9 +842,9 @@ consumer1UserAccount=53
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "consumer1"
-# 	- password: java.lang.String = "$2a$05$rmEv3/MjmJxfAwkhOvvsJ.hjyt08rRsYZCdzw/jzlgmvZ8OqmL.bS"
+# 	- password: java.lang.String = "$2a$05$uadcCYEdLmQwQiipeX0t1e7PuNqXkD7p1/sbJFLQc7t.Xp/tCLLK6"
 # 	- enabled: boolean = true
-# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Consumer, surname=One, email=consumer1@mail.com)
+# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Consumer, surname=One, email=consumer1@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Consumer{id=54, version=0}, acme.framework.entities.Authenticated{id=55, version=0}]
 # 	@ $assertionsDisabled: boolean = false
 
@@ -889,9 +889,9 @@ employer1UserAccount=56
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer1"
-# 	- password: java.lang.String = "$2a$05$GQrV4azNMFjFLpguFbIm0.hCCJqDhvXmc6e639BSlaBLMEfwQJB9u"
+# 	- password: java.lang.String = "$2a$05$CnqFdTYrquB.uk.UjUof1OmtYhgq/wn.GWyDW9ZSSGH8V6HU6GF.y"
 # 	- enabled: boolean = true
-# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=One, email=employer1@mail.com)
+# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=One, email=employer1@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=57, version=0}, acme.framework.entities.Authenticated{id=58, version=0}]
 # 	@ $assertionsDisabled: boolean = false
 
@@ -936,9 +936,9 @@ employer2UserAccount=59
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer2"
-# 	- password: java.lang.String = "$2a$05$4/JpwZnf1x44UTBc8VlftOzXb2.nLUhCwPWgtVEI.AMOYWAZFum0K"
+# 	- password: java.lang.String = "$2a$05$qCfauc50apPSQAiMivT6Yu0KWBr30q/vCFct5ggW2IsYX9IwvaxI2"
 # 	- enabled: boolean = true
-# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=Two, email=employer2@mail.com)
+# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=Two, email=employer2@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=60, version=0}, acme.framework.entities.Authenticated{id=61, version=0}]
 # 	@ $assertionsDisabled: boolean = false
 
@@ -1217,9 +1217,9 @@ worker1UserAccount=76
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker1"
-# 	- password: java.lang.String = "$2a$05$TneZCKX7tTRhk1Dy399WRukS15dxyf0Q.LF1ZneztvUk2i/r1JQy6"
+# 	- password: java.lang.String = "$2a$05$TBzRV.Oc5Dq3XC8azzdNq.fGAQZzSMzBeCi/Pef9NdWmLry6pCWuy"
 # 	- enabled: boolean = true
-# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=One, email=worker1@mail.com)
+# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=One, email=worker1@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=77, version=0}, acme.framework.entities.Authenticated{id=78, version=0}]
 # 	@ $assertionsDisabled: boolean = false
 
@@ -1264,9 +1264,9 @@ worker2UserAccount=79
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker2"
-# 	- password: java.lang.String = "$2a$05$e/RSzLw2zf.AF6KuOPLRYu6n.7uTYyPSdq4vaX/IPYX64d9.V4T8O"
+# 	- password: java.lang.String = "$2a$05$6Av69Y8Pu2i..0YlCeG8IONe48xrxw76edyjJAqLaUaosxbu.rwui"
 # 	- enabled: boolean = true
-# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=Two, email=worker2@mail.com)
+# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=Two, email=worker2@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=80, version=0}, acme.framework.entities.Authenticated{id=81, version=0}]
 # 	@ $assertionsDisabled: boolean = false
 
@@ -1479,9 +1479,9 @@ auditor1UserAccount=90
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor1"
-# 	- password: java.lang.String = "$2a$05$QySB0X127otS3YqN.qt5mefJObkQZ41PuiDztnPqbyYGhHxu1ZYsm"
+# 	- password: java.lang.String = "$2a$05$bMc/aJe5F326Raiy8.BBWOhDGtOf.CuqeRMkoy9jgrPSdZuqEWtgC"
 # 	- enabled: boolean = true
-# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Auditor, surname=One, email=auditor1@mail.com)
+# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Auditor, surname=One, email=auditor1@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=91, version=0}, acme.framework.entities.Authenticated{id=92, version=0}]
 # 	@ $assertionsDisabled: boolean = false
 
@@ -1526,9 +1526,9 @@ auditor2UserAccount=93
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor2"
-# 	- password: java.lang.String = "$2a$05$RXtW06CYLv4y2g4wNk9eAepbizqKswMNj.MsqQz3c3hFAODelJTm6"
+# 	- password: java.lang.String = "$2a$05$pIcsbo8i9ENQYRQjqjeRkuAVcGWeL2.A749qGJbBSjLDg5EGaIGji"
 # 	- enabled: boolean = true
-# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Auditor, surname=Two, email=auditor2@mail.com)
+# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Auditor, surname=Two, email=auditor2@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=94, version=0}, acme.framework.entities.Authenticated{id=95, version=0}]
 # 	@ $assertionsDisabled: boolean = false
 
@@ -1796,9 +1796,9 @@ sponsor1UserAccount=110
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor1"
-# 	- password: java.lang.String = "$2a$05$QVCQ6lVKfD0ecVggadq.Oejhb2OSigycYPqKgNeN9FQCYt0fkxumO"
+# 	- password: java.lang.String = "$2a$05$qxa2dSM1BzdvZFzrwxeVLOEJ0X8v7cn5xxY2/FEhggjsQ/WxXEsC6"
 # 	- enabled: boolean = true
-# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor1@mail.com)
+# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor1@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=111, version=0}, acme.framework.entities.Authenticated{id=112, version=0}]
 # 	@ $assertionsDisabled: boolean = false
 
@@ -1843,9 +1843,9 @@ sponsor2UserAccount=113
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor2"
-# 	- password: java.lang.String = "$2a$05$6IBCqMuPh.XRXEfsR1GRQu506gytLu9TaLz.mW12B7z78naZM1UhC"
+# 	- password: java.lang.String = "$2a$05$kXRCtFhQx37XgwSYKlNQROPPu26VzxLwQecXve6d7gHMq8G7rE.fq"
 # 	- enabled: boolean = true
-# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=Two, email=sponsor2@mail.com)
+# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=Two, email=sponsor2@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=114, version=0}, acme.framework.entities.Authenticated{id=115, version=0}]
 # 	@ $assertionsDisabled: boolean = false
 
@@ -1890,9 +1890,9 @@ sponsor3UserAccount=116
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor3"
-# 	- password: java.lang.String = "$2a$05$jjP.hjWX0/mKmscEhaKW6.2f./nJ7pT/AVBgj6sbMOt/Zykv5LmL."
+# 	- password: java.lang.String = "$2a$05$GMq1uCljByJnV08DuLd99.p6Flkof3oJBMY/y98hnsOyHtFxaVzK."
 # 	- enabled: boolean = true
-# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=Three, email=sponsor3@mail.com)
+# 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=Three, email=sponsor3@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=117, version=0}, acme.framework.entities.Authenticated{id=118, version=0}]
 # 	@ $assertionsDisabled: boolean = false
 
