--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$nsVMD/xaCOV4yETcPWy4puy7IfV8SPOe3mkEA48sT0Z/Gqxk1X7fu"
+# 	- password: java.lang.String = "$2a$05$Tp.dNOw1TJRIulOhBndX6eKWwaSGMCprIXX6M.hQtRsnQbYH.wXSi"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$RddvKKjb1X0glsZ.BgVxoeJogn.HmV9xqE5LBzCbIltDEpBeICduO"
+# 	- password: java.lang.String = "$2a$05$kQP4T7qXklyMtKKhoxbrkeIRuSWQKVyU5VkWpPHt.p6y.xn383ZSu"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -865,7 +865,7 @@ provider1UserAccount=55
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "provider1"
-# 	- password: java.lang.String = "$2a$05$wBlxqoub2y2tCPcXTcN0oOftL59BS1P5tK6k1CYPos81zzuWUGnO."
+# 	- password: java.lang.String = "$2a$05$mn2/s5F1LGrF/.ex4xYgOOO9WGdP.iAt3oHp8AbtDvE.akoGuMe66"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Provider, surname=One, email=provider1@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Provider{id=56, version=0}, acme.framework.entities.Authenticated{id=57, version=0}]
@@ -912,7 +912,7 @@ consumer1UserAccount=58
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "consumer1"
-# 	- password: java.lang.String = "$2a$05$hoEpkXMCJC4kOq.ywLD1GuCeFuSS/6Epw0oTB/AEHTpeUfo2u2yg."
+# 	- password: java.lang.String = "$2a$05$N./4XxR.s9/UvVo1HltpgeVRYzAOxLRIAvGfSqyhP.qwjQa0QMpR2"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Consumer, surname=One, email=consumer1@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Consumer{id=59, version=0}, acme.framework.entities.Authenticated{id=60, version=0}]
@@ -959,7 +959,7 @@ employer1UserAccount=61
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer1"
-# 	- password: java.lang.String = "$2a$05$zxRU/3wx/6rnHH8J17us9.joyUeaVSgma0UgnDZe8KNmcfs.TXkzC"
+# 	- password: java.lang.String = "$2a$05$ryLamH7MVbsXFsCn.O0IH.5eBfRM33NF.BbQCFDyEmx2YO6Y4lHoi"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=One, email=employer1@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=62, version=0}, acme.framework.entities.Authenticated{id=63, version=0}]
@@ -1006,7 +1006,7 @@ employer2UserAccount=64
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer2"
-# 	- password: java.lang.String = "$2a$05$rHn0PezBsleMfR33md4ww.EELkuR3Zs2DPVUqbHCGrBjY/pg0V7Yy"
+# 	- password: java.lang.String = "$2a$05$fEeCzA0dy9jRh.O3f1D1NuSC0Grd.mpMLtkgwkWKUCc91XbHa09WG"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=Two, email=employer2@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=65, version=0}, acme.framework.entities.Authenticated{id=66, version=0}]
@@ -1287,7 +1287,7 @@ worker1UserAccount=81
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker1"
-# 	- password: java.lang.String = "$2a$05$jXJ2FTwpF2JCsDxaJrfLxONDXnIN7Rst9H0N50Sy.9L7w/63P0h9q"
+# 	- password: java.lang.String = "$2a$05$3vnjqA5NA46wBIbl/8C9vul7loqq5ZwtRJbV9WbXlu6qm3.b1lWse"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=One, email=worker1@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=82, version=0}, acme.framework.entities.Authenticated{id=83, version=0}]
@@ -1334,7 +1334,7 @@ worker2UserAccount=84
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker2"
-# 	- password: java.lang.String = "$2a$05$mrlg4nAQQIjYIHi1ohAEtOqfAoYrhQUTaTWnmRv6ntPIQoRS2pVVK"
+# 	- password: java.lang.String = "$2a$05$BoMZFzAbyJJcWdWb0gJxTuwDFUZfdSB6ooNl0WjNo31vVWzQ9RmJq"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=Two, email=worker2@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=85, version=0}, acme.framework.entities.Authenticated{id=86, version=0}]
@@ -1549,7 +1549,7 @@ auditor1UserAccount=95
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor1"
-# 	- password: java.lang.String = "$2a$05$/cCYggYmtW7fYgfvlbA14.mFNq59hJnPceA6ikIxmY6Oed2Ksbz5G"
+# 	- password: java.lang.String = "$2a$05$mN/5iWnQIkKzIZPNe7OKIurshhJGm23GkUQhyBzn2.WvuCrCiRGNC"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Auditor, surname=One, email=auditor1@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=96, version=0}, acme.framework.entities.Authenticated{id=97, version=0}]
@@ -1596,7 +1596,7 @@ auditor2UserAccount=98
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor2"
-# 	- password: java.lang.String = "$2a$05$LISVZTF.UytCQSFePyiS3u9QIZNgL9oFkfH.eF8I5kcEe2KB57qA6"
+# 	- password: java.lang.String = "$2a$05$0UNWaRS2RLjd0RVUsG7YB.XD1DRPmvxS4UI3ORj9FEm/l6TcTF4Lu"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Auditor, surname=Two, email=auditor2@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=99, version=0}, acme.framework.entities.Authenticated{id=100, version=0}]
@@ -1866,7 +1866,7 @@ sponsor1UserAccount=115
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor1"
-# 	- password: java.lang.String = "$2a$05$/wx2dyCBA6O2bgMFkAkMfuRQqcYyxDo8aDT89A0Jb9rS2iEZji76W"
+# 	- password: java.lang.String = "$2a$05$IOgZMPCQZ7yzUi944lFK5unmmKcfr1baOtcBuGfYziqwYJ5CUfQE2"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor1@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=116, version=0}, acme.framework.entities.Authenticated{id=117, version=0}]
@@ -1913,7 +1913,7 @@ sponsor2UserAccount=118
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor2"
-# 	- password: java.lang.String = "$2a$05$.SyJvVTT8XkFJimiintzNuX1JI/KgsWe7rBu0ZENIco8lsoPhXnoK"
+# 	- password: java.lang.String = "$2a$05$NZLtmnTLxa44pFt1s5qzFuh/vRxmBp2pbEnhFOVDhGZUest2n8dJS"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=Two, email=sponsor2@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=119, version=0}, acme.framework.entities.Authenticated{id=120, version=0}]
@@ -1960,7 +1960,7 @@ sponsor3UserAccount=121
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor3"
-# 	- password: java.lang.String = "$2a$05$l7vrsUHswOgkZohiJ98PMuYvgirXssKDyMFTwgAGIifoK9XTkdOFa"
+# 	- password: java.lang.String = "$2a$05$czv21lM3NwtTUn6L6hEhBu3EB7IZCqvRA7/JObY4nz/pNeOkTlbZi"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=Three, email=sponsor3@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=122, version=0}, acme.framework.entities.Authenticated{id=123, version=0}]
