--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$Tp.dNOw1TJRIulOhBndX6eKWwaSGMCprIXX6M.hQtRsnQbYH.wXSi"
+# 	- password: java.lang.String = "$2a$05$GIKHKpY/Tb0Fi538mHug7.wmC3NNhXDmnGF01YkRHlRA1qlCS.dIi"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$kQP4T7qXklyMtKKhoxbrkeIRuSWQKVyU5VkWpPHt.p6y.xn383ZSu"
+# 	- password: java.lang.String = "$2a$05$Sn3X62CMvBW9439zNWZzR.GeHh/4DbU/WYeGVf79UfaoVC.N6WOXq"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -865,7 +865,7 @@ provider1UserAccount=55
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "provider1"
-# 	- password: java.lang.String = "$2a$05$mn2/s5F1LGrF/.ex4xYgOOO9WGdP.iAt3oHp8AbtDvE.akoGuMe66"
+# 	- password: java.lang.String = "$2a$05$O4xm56K3hk8728rn5HZ.kuqX1QPgwlDp24bohDphImsh4ZXGY9r.6"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Provider, surname=One, email=provider1@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Provider{id=56, version=0}, acme.framework.entities.Authenticated{id=57, version=0}]
@@ -912,7 +912,7 @@ consumer1UserAccount=58
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "consumer1"
-# 	- password: java.lang.String = "$2a$05$N./4XxR.s9/UvVo1HltpgeVRYzAOxLRIAvGfSqyhP.qwjQa0QMpR2"
+# 	- password: java.lang.String = "$2a$05$5Iuf5QeQSjbzth6VLgS7ouAwa5ag2pvWsG.nT0Xbk0dGEbVakTuWy"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Consumer, surname=One, email=consumer1@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Consumer{id=59, version=0}, acme.framework.entities.Authenticated{id=60, version=0}]
@@ -959,7 +959,7 @@ employer1UserAccount=61
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer1"
-# 	- password: java.lang.String = "$2a$05$ryLamH7MVbsXFsCn.O0IH.5eBfRM33NF.BbQCFDyEmx2YO6Y4lHoi"
+# 	- password: java.lang.String = "$2a$05$soZT1apv5rj8zlzQ2wOseuXChyOvIF80XE2kryOQN/wUleLiXQFKy"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=One, email=employer1@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=62, version=0}, acme.framework.entities.Authenticated{id=63, version=0}]
@@ -1006,7 +1006,7 @@ employer2UserAccount=64
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer2"
-# 	- password: java.lang.String = "$2a$05$fEeCzA0dy9jRh.O3f1D1NuSC0Grd.mpMLtkgwkWKUCc91XbHa09WG"
+# 	- password: java.lang.String = "$2a$05$jQrKBwfHyO7yZ3dhFhcw0.1Abe9q0C1YqXjdiahN9rrOHog1ZE.nC"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=Two, email=employer2@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=65, version=0}, acme.framework.entities.Authenticated{id=66, version=0}]
@@ -1287,7 +1287,7 @@ worker1UserAccount=81
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker1"
-# 	- password: java.lang.String = "$2a$05$3vnjqA5NA46wBIbl/8C9vul7loqq5ZwtRJbV9WbXlu6qm3.b1lWse"
+# 	- password: java.lang.String = "$2a$05$S.4h9oDQ8fGNGaxyxZXsce8SETcwqiKofCQrnh9F8WwRnPUM48bYO"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=One, email=worker1@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=82, version=0}, acme.framework.entities.Authenticated{id=83, version=0}]
@@ -1334,7 +1334,7 @@ worker2UserAccount=84
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker2"
-# 	- password: java.lang.String = "$2a$05$BoMZFzAbyJJcWdWb0gJxTuwDFUZfdSB6ooNl0WjNo31vVWzQ9RmJq"
+# 	- password: java.lang.String = "$2a$05$GsiMh8GGzKrUWiVb3sI/CO0VwD6kQpKtOSR1/38rxWvA3jKMcEZLe"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=Two, email=worker2@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=85, version=0}, acme.framework.entities.Authenticated{id=86, version=0}]
@@ -1381,8 +1381,8 @@ job1app1=87
 # 	from acme.entities.applications.Application:
 # 	- serialVersionUID: long = 1
 # 	- reference: java.lang.String = "EMP1-JOB1-WOR1"
-# 	- moment: java.util.Date = <<Wed Dec 11 23:59:00 CET 2019>>
-# 	- updateMoment: java.util.Date = <<Fri Dec 13 23:59:00 CET 2019>>
+# 	- moment: java.util.Date = <<Sat Jan 11 23:59:00 CET 2020>>
+# 	- updateMoment: java.util.Date = <<Mon Jan 13 23:59:00 CET 2020>>
 # 	- status: java.lang.String = "accepted"
 # 	- statement: java.lang.String = "Statement 1"
 # 	- skills: java.lang.String = "Skills 1"
@@ -1402,8 +1402,8 @@ job1app2=88
 # 	from acme.entities.applications.Application:
 # 	- serialVersionUID: long = 1
 # 	- reference: java.lang.String = "EMP1-JOB1-WOR2"
-# 	- moment: java.util.Date = <<Sat Dec 14 23:59:00 CET 2019>>
-# 	- updateMoment: java.util.Date = <<Sun Dec 15 23:59:00 CET 2019>>
+# 	- moment: java.util.Date = <<Sat Jan 11 23:59:00 CET 2020>>
+# 	- updateMoment: java.util.Date = <<Sun Jan 12 23:59:00 CET 2020>>
 # 	- status: java.lang.String = "accepted"
 # 	- statement: java.lang.String = "Statement 3"
 # 	- skills: java.lang.String = "Skills 3"
@@ -1423,8 +1423,8 @@ job3app1=89
 # 	from acme.entities.applications.Application:
 # 	- serialVersionUID: long = 1
 # 	- reference: java.lang.String = "EMP1-JOB3-WOR1"
-# 	- moment: java.util.Date = <<Sun Dec 15 23:59:00 CET 2019>>
-# 	- updateMoment: java.util.Date = <<Mon Dec 16 23:59:00 CET 2019>>
+# 	- moment: java.util.Date = <<Sat Jan 04 23:59:00 CET 2020>>
+# 	- updateMoment: java.util.Date = <<Wed Jan 08 23:59:00 CET 2020>>
 # 	- status: java.lang.String = "rejected"
 # 	- statement: java.lang.String = "Statement 4"
 # 	- skills: java.lang.String = "Skills 4"
@@ -1444,8 +1444,8 @@ job4app1=90
 # 	from acme.entities.applications.Application:
 # 	- serialVersionUID: long = 1
 # 	- reference: java.lang.String = "EMP2-JOB4-WOR2"
-# 	- moment: java.util.Date = <<Thu Apr 11 23:59:00 CEST 2019>>
-# 	- updateMoment: java.util.Date = <<Thu Apr 11 23:59:00 CEST 2019>>
+# 	- moment: java.util.Date = <<Mon Jan 13 23:59:00 CET 2020>>
+# 	- updateMoment: java.util.Date = <<Mon Jan 13 23:59:00 CET 2020>>
 # 	- status: java.lang.String = "pending"
 # 	- statement: java.lang.String = "Statement 5"
 # 	- skills: java.lang.String = "Skills 5"
@@ -1465,8 +1465,8 @@ job2app1=91
 # 	from acme.entities.applications.Application:
 # 	- serialVersionUID: long = 1
 # 	- reference: java.lang.String = "EMP1-JOB2-WOR1"
-# 	- moment: java.util.Date = <<Sat Dec 14 23:59:00 CET 2019>>
-# 	- updateMoment: java.util.Date = <<Sat Dec 14 23:59:00 CET 2019>>
+# 	- moment: java.util.Date = <<Mon Jan 13 23:59:00 CET 2020>>
+# 	- updateMoment: java.util.Date = <<Mon Jan 13 23:59:00 CET 2020>>
 # 	- status: java.lang.String = "pending"
 # 	- statement: java.lang.String = "Statement 2"
 # 	- skills: java.lang.String = "Skills 2"
@@ -1486,8 +1486,8 @@ job2app3=92
 # 	from acme.entities.applications.Application:
 # 	- serialVersionUID: long = 1
 # 	- reference: java.lang.String = "EMP1-JOB2-WOR2"
-# 	- moment: java.util.Date = <<Sat Dec 14 23:59:00 CET 2019>>
-# 	- updateMoment: java.util.Date = <<Sat Dec 14 23:59:00 CET 2019>>
+# 	- moment: java.util.Date = <<Sun Jan 12 23:59:00 CET 2020>>
+# 	- updateMoment: java.util.Date = <<Sun Jan 12 23:59:00 CET 2020>>
 # 	- status: java.lang.String = "pending"
 # 	- statement: java.lang.String = "Statement 7"
 # 	- skills: java.lang.String = "Skills 7"
@@ -1507,8 +1507,8 @@ job3app2=93
 # 	from acme.entities.applications.Application:
 # 	- serialVersionUID: long = 1
 # 	- reference: java.lang.String = "EMP1-JOB3-WOR2"
-# 	- moment: java.util.Date = <<Mon Dec 16 23:59:00 CET 2019>>
-# 	- updateMoment: java.util.Date = <<Mon Dec 16 23:59:00 CET 2019>>
+# 	- moment: java.util.Date = <<Sat Jan 11 23:59:00 CET 2020>>
+# 	- updateMoment: java.util.Date = <<Sat Jan 11 23:59:00 CET 2020>>
 # 	- status: java.lang.String = "pending"
 # 	- statement: java.lang.String = "Statement 6"
 # 	- skills: java.lang.String = "Skills 6"
@@ -1528,8 +1528,8 @@ job4app2=94
 # 	from acme.entities.applications.Application:
 # 	- serialVersionUID: long = 1
 # 	- reference: java.lang.String = "EMP2-JOB4-WOR1"
-# 	- moment: java.util.Date = <<Sun Dec 15 23:59:00 CET 2019>>
-# 	- updateMoment: java.util.Date = <<Mon Dec 16 23:59:00 CET 2019>>
+# 	- moment: java.util.Date = <<Tue Jan 07 22:59:00 CET 2020>>
+# 	- updateMoment: java.util.Date = <<Wed Jan 08 23:59:00 CET 2020>>
 # 	- status: java.lang.String = "rejected"
 # 	- statement: java.lang.String = "Statement 8"
 # 	- skills: java.lang.String = "Skills 8"
@@ -1549,7 +1549,7 @@ auditor1UserAccount=95
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor1"
-# 	- password: java.lang.String = "$2a$05$mN/5iWnQIkKzIZPNe7OKIurshhJGm23GkUQhyBzn2.WvuCrCiRGNC"
+# 	- password: java.lang.String = "$2a$05$qU2M3Vg/vn1TKDDdNG7rVuStmrYNiVQj46u2wLwToKYcBNDY4NV8W"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Auditor, surname=One, email=auditor1@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=96, version=0}, acme.framework.entities.Authenticated{id=97, version=0}]
@@ -1596,7 +1596,7 @@ auditor2UserAccount=98
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor2"
-# 	- password: java.lang.String = "$2a$05$0UNWaRS2RLjd0RVUsG7YB.XD1DRPmvxS4UI3ORj9FEm/l6TcTF4Lu"
+# 	- password: java.lang.String = "$2a$05$X/unyZZLFwNuFfGc8uUtguCq3RnN3Wj1bqdhe4ljgJioxGob9OdhC"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Auditor, surname=Two, email=auditor2@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=99, version=0}, acme.framework.entities.Authenticated{id=100, version=0}]
@@ -1866,7 +1866,7 @@ sponsor1UserAccount=115
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor1"
-# 	- password: java.lang.String = "$2a$05$IOgZMPCQZ7yzUi944lFK5unmmKcfr1baOtcBuGfYziqwYJ5CUfQE2"
+# 	- password: java.lang.String = "$2a$05$TwZg2T0HOCIQZeEcix0OVeQVeQFQAtnlRDhorim7RAXrO/Aokw5jO"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor1@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=116, version=0}, acme.framework.entities.Authenticated{id=117, version=0}]
@@ -1913,7 +1913,7 @@ sponsor2UserAccount=118
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor2"
-# 	- password: java.lang.String = "$2a$05$NZLtmnTLxa44pFt1s5qzFuh/vRxmBp2pbEnhFOVDhGZUest2n8dJS"
+# 	- password: java.lang.String = "$2a$05$dc/DNy2imYR0a7Fj/ac5eOrRuRURHwHv7Dl/pAOGP2R/kFoAgSEgS"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=Two, email=sponsor2@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=119, version=0}, acme.framework.entities.Authenticated{id=120, version=0}]
@@ -1960,7 +1960,7 @@ sponsor3UserAccount=121
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor3"
-# 	- password: java.lang.String = "$2a$05$czv21lM3NwtTUn6L6hEhBu3EB7IZCqvRA7/JObY4nz/pNeOkTlbZi"
+# 	- password: java.lang.String = "$2a$05$IPi.uObFCyGEyu5UEcYCf.beB5Gk.Vt2Cb1qtPZRcFhYTneqbTKYe"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=Three, email=sponsor3@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=122, version=0}, acme.framework.entities.Authenticated{id=123, version=0}]
@@ -2006,9 +2006,9 @@ commercialBanner01=124
 # 	- version: int = 0
 # 	from acme.entities.banners.Banner:
 # 	- serialVersionUID: long = 1
-# 	- picture: java.lang.String = "https://www.tumblr.com/commercialBannerSample01"
-# 	- slogan: java.lang.String = "commercial banner slogan sample 1"
-# 	- URL: java.lang.String = "https://www.tumblr.com"
+# 	- picture: java.lang.String = "https://colaninfotech.com/wp-content/uploads/2019/01/Spring_Banner.png"
+# 	- slogan: java.lang.String = "Spring framework"
+# 	- URL: java.lang.String = "https://www.acme.com"
 # 	from acme.entities.banners.CommercialBanner:
 # 	- serialVersionUID: long = 1
 # 	- sponsor: acme.entities.roles.Sponsor = acme.entities.roles.Sponsor{id=116, version=0}
@@ -2024,9 +2024,9 @@ commercialBanner02=125
 # 	- version: int = 0
 # 	from acme.entities.banners.Banner:
 # 	- serialVersionUID: long = 1
-# 	- picture: java.lang.String = "https://www.tumblr.com/commercialBannerSample02"
-# 	- slogan: java.lang.String = "commercial banner slogan sample 2"
-# 	- URL: java.lang.String = "https://www.tumblr.com"
+# 	- picture: java.lang.String = "https://www.thewrap.com/wp-content/uploads/files/main_image/netflix-banner.jpg"
+# 	- slogan: java.lang.String = "Netflix and chill"
+# 	- URL: java.lang.String = "https://www.acme.com"
 # 	from acme.entities.banners.CommercialBanner:
 # 	- serialVersionUID: long = 1
 # 	- sponsor: acme.entities.roles.Sponsor = acme.entities.roles.Sponsor{id=122, version=0}
@@ -2042,9 +2042,9 @@ nonCommercialBanner01=126
 # 	- version: int = 0
 # 	from acme.entities.banners.Banner:
 # 	- serialVersionUID: long = 1
-# 	- picture: java.lang.String = "https://www.tumblr.com/NonCommercialBannerSample01"
-# 	- slogan: java.lang.String = "non commercial banner slogan sample 1"
-# 	- URL: java.lang.String = "https://www.tumblr.com"
+# 	- picture: java.lang.String = "https://i.imgur.com/NGLSjk6.png"
+# 	- slogan: java.lang.String = "What would you change?"
+# 	- URL: java.lang.String = "https://www.acme.com"
 # 	from acme.entities.banners.NonCommercialBanner:
 # 	- serialVersionUID: long = 1
 # 	- jingle: java.lang.String = "a beautiful jingle sample 1"
@@ -2060,9 +2060,9 @@ nonCommercialBanner02=127
 # 	- version: int = 0
 # 	from acme.entities.banners.Banner:
 # 	- serialVersionUID: long = 1
-# 	- picture: java.lang.String = "https://www.tumblr.com/NonCommercialBannerSample02"
-# 	- slogan: java.lang.String = "non commercial banner slogan sample 2"
-# 	- URL: java.lang.String = "https://www.tumblr.com"
+# 	- picture: java.lang.String = "https://i.imgur.com/8YcXhS0.png"
+# 	- slogan: java.lang.String = "Our planet needs superheroes like you"
+# 	- URL: java.lang.String = "https://www.acme.com"
 # 	from acme.entities.banners.NonCommercialBanner:
 # 	- serialVersionUID: long = 1
 # 	- jingle: java.lang.String = "a beautiful jingle sample 2"
