Avoiding creation of an audit record for an elapsed job

--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$DB1OlL5UjHTPbzLJxxZOI.CqY4YGASQE/AJ09THlCmuJ7U/MPQNI6"
+# 	- password: java.lang.String = "$2a$05$H6UczipIkNOCQutPZJMW0ucb46REe5BAGoFuCZQMaEfNm9hh7CPqq"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$m7QnDFXCcRkbTBeRH/LdjOvALBOshBNBZvQr8EomkHEoWMZ.688RC"
+# 	- password: java.lang.String = "$2a$05$jV7NfvAWiCAYxvW65fN2KORQRbKQWS8Xk2XS1AtS4PNaLJYehPd2G"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -760,7 +760,7 @@ employer1UserAccount=49
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer1"
-# 	- password: java.lang.String = "$2a$05$fo9f7zgcUiOon01rXAE6PeDR1.d42/enUJC7v/075oOj./RKG7np."
+# 	- password: java.lang.String = "$2a$05$nC76B2Grl4aL0n9N9pHWcOEU0eB6O/YBcpwGRJleZ3QdnKLtf8mMK"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=One, email=employer1@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=50, version=0}, acme.framework.entities.Authenticated{id=51, version=0}]
@@ -807,7 +807,7 @@ employer2UserAccount=52
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "employer2"
-# 	- password: java.lang.String = "$2a$05$SjpqLygltD9SY22wczq/gez3gsGKeda51cmSIZXrg1N/kVHdY8MJa"
+# 	- password: java.lang.String = "$2a$05$Gwhnf9EE6uuAGek4LV9Lou4h6gz5nzTm/JAfoA9WO6FiSqakl.t4S"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Employer, surname=Two, email=employer2@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Employer{id=53, version=0}, acme.framework.entities.Authenticated{id=54, version=0}]
@@ -1088,7 +1088,7 @@ worker1UserAccount=69
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker1"
-# 	- password: java.lang.String = "$2a$05$k0DAHg8Ct794o23enOuKueov8LvYG3IMIlztHDgS.ocM3YJ/neCNy"
+# 	- password: java.lang.String = "$2a$05$tnWY7Pop0B04MwzLSQzZ6eOCKMKu7WZbqUp92DGa8OUpfzB/9aJJ2"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=One, email=worker1@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=70, version=0}, acme.framework.entities.Authenticated{id=71, version=0}]
@@ -1135,7 +1135,7 @@ worker2UserAccount=72
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "worker2"
-# 	- password: java.lang.String = "$2a$05$mO5XFTXspQSJUII6b7HI9.Mp3GBcyYLs.2Bgzz/.q26/oukN8AbE2"
+# 	- password: java.lang.String = "$2a$05$ncuZtouh7Bhy6c.Ghn3kb.zFLPi2fDZf/UeHQaRaTK/8XeNS0.0Su"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Worker, surname=Two, email=worker2@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Worker{id=73, version=0}, acme.framework.entities.Authenticated{id=74, version=0}]
@@ -1350,7 +1350,7 @@ auditor1UserAccount=83
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor1"
-# 	- password: java.lang.String = "$2a$05$MaHHQiM66ctb3fjsht6B6uaVdah8tJAK0RG/pOE36St2/LiK7/8na"
+# 	- password: java.lang.String = "$2a$05$CsXEUFRHgSvDZ8UVbA49fel15e/OdwLqmO8VUyY/XVlJE1dJIRYhC"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Auditor, surname=One, email=auditor1@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=84, version=0}, acme.framework.entities.Authenticated{id=85, version=0}]
@@ -1397,7 +1397,7 @@ auditor2UserAccount=86
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "auditor2"
-# 	- password: java.lang.String = "$2a$05$XsBVpE8zJn0NxDsNWT/C1edol0IlwfjMnjz4rhNZMnu.v2LQquyxC"
+# 	- password: java.lang.String = "$2a$05$NX6FwdUGODSMLDQ2xYvetei7yT/qfwiOhLCwW55zb8XXQM063Y2j."
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Auditor, surname=Two, email=auditor2@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Auditor{id=87, version=0}, acme.framework.entities.Authenticated{id=88, version=0}]
@@ -1563,7 +1563,7 @@ sponsor1UserAccount=96
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor1"
-# 	- password: java.lang.String = "$2a$05$AaqmCZ9T6ZQOLQN5ahAZJu7RjrTxZ0.EdglSu3fvwiIjFlfW9Si8q"
+# 	- password: java.lang.String = "$2a$05$Felmmg7fP6/217ggxTdnEO.WGOMVhtb3X3L85I6vF6eLLDM3EHgyK"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=One, email=sponsor1@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=97, version=0}, acme.framework.entities.Authenticated{id=98, version=0}]
@@ -1610,7 +1610,7 @@ sponsor2UserAccount=99
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor2"
-# 	- password: java.lang.String = "$2a$05$TbqHgl95RBLjl.4fRu.0huwzhqmZYPCS2.6yCqHAHzmx0kjPwXs86"
+# 	- password: java.lang.String = "$2a$05$zbfKkmO.1H77BamtQ..ke.n9NHZTc0/kDIUdb2hkN7fIZ8bMACSXu"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=Two, email=sponsor2@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=100, version=0}, acme.framework.entities.Authenticated{id=101, version=0}]
@@ -1657,7 +1657,7 @@ sponsor3UserAccount=102
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "sponsor3"
-# 	- password: java.lang.String = "$2a$05$85Dtlz4Cjkx48Q3MWKA5OO9KBGHYLHopSJAcX0Q4SU0mwM6NrRMIm"
+# 	- password: java.lang.String = "$2a$05$4RU7xCQyT8UcweyplVhlvet777qLo9BFrZodcH/PxqClVY/DbQ5x6"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Sponsor, surname=Three, email=sponsor3@mail.com, phone=null)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Sponsor{id=103, version=0}, acme.framework.entities.Authenticated{id=104, version=0}]
