--- a/src/main/resources/application-deployment.properties
+++ b/src/main/resources/application-deployment.properties
@@ -10,9 +10,9 @@
 
 # User-defined properties.  Please, change them to adapt the starter project to your needs. 
 
-spring.datasource.url							= jdbc:mysql://bbifmc5ryqdmisrlvgqr-mysql.services.clever-cloud.com:3306/bbifmc5ryqdmisrlvgqr
-spring.datasource.username						= ujagcaib9bcq8t9h
-spring.datasource.password						= XOQa0ifncFzXcu35IhBm
+spring.datasource.url							= jdbc:mysql://bbfsi9lnisxooddwnxkx-mysql.services.clever-cloud.com:3306/bbfsi9lnisxooddwnxkx
+spring.datasource.username						= uxsv2pb9cvrm25su
+spring.datasource.password						= INurnhbpdYmDk1OPQBo6
 
 spring.jpa.hibernate.show-sql					= true
 spring.jpa.hibernate.format-sql					= true
